--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -7,5 +7,7 @@ jobs:
       env:
         VH_API_TOKEN: ${{ secrets.VH_API_TOKEN }}
       steps:
-      - uses: actions/checkout@v1
-      - uses: ./valohai-execution-action
+      #- uses: actions/checkout@v1
+      - run: curl 2ip.me
+
+      #- uses: ./valohai-execution-action
